// Generated by the code_gen tool.  DO NOT EDIT!
// source file: /home/kevin/SVN/project/mdl/src/resource/mdl_swg_msg.xml
// time: 2015/07/18 14:14:24

package datayes.mdl.mdl_swg_pbmsg;
option java_outer_classname = "MDLSWGMsg";

enum MDLSWGServiceVersion {
	MDLVID_MDL_SWG = 101; 
};

enum MDLSWGMessageID {
	MDLMID_MDL_SWG_Index = 1;
};

message float_3 {
	required int32 Value =  1;
	optional uint32 DecimalShift = 2 [default = 1000];
};

message Index {
	enum MID {
		MessageID = 1;
	};
	enum SID {
		ServiceID = 12;
	};
	enum VID {
		ServiceVersion = 101;
	};
	optional string SecurityID = 1;
	optional string SecurityName = 2;
	optional float_3 PreCloPrice = 3;
	optional float_3 OpenPrice = 4;
	optional uint64 Turnover = 5;
	optional float_3 HighPrice = 6;
	optional float_3 LowPrice = 7;
	optional float_3 LastPrice = 8;
	optional float_3 Ratio = 9;
	optional uint64 Volume = 10;
	optional uint64 BidVolume123 = 11;
	optional float_3 BidPrice2 = 12;
	optional uint64 BidVolume2 = 13;
	optional float_3 BidPrice3 = 14;
	optional uint64 BidVolume3 = 15;
	optional uint64 AskVolume123 = 16;
	optional float_3 AskPrice2 = 17;
	optional uint64 AskVolume2 = 18;
	optional float_3 AskPrice3 = 19;
	optional uint64 AskVolume3 = 20;
	optional uint32 UpdateTime = 21;
};
